# rust_showcase

./: .env.example  Cargo.toml  README.md
src/: auth.rs  db.rs  main.rs
src/db/: schema.surql
src/models/: mod.rs
src/routes/: auth.rs  mod.rs  users.rs
