[package]
name = "hsr-calculator-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
surrealdb = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
dotenv = "0.15"
jsonwebtoken = "9.3.1"
chrono = "0.4.31"
actix-web-httpauth = "0.8"
argon2 = "0.5"
rand = "0.9.0"
hex = "0.4.3"